# mcp-opendart

./: .env.example  .gitignore  LICENSE  README.md  README_en.md  pyproject.toml
src/mcp_opendart/: __init__.py  __main__.py  config.py  server.py
src/mcp_opendart/apis/: client.py  ds001.py  ds002.py  ds003.py  ds004.py  ds005.py  ds006.py
src/mcp_opendart/prompt/: system.prompt.gemma3:27B  prompt_builder.py  system.prompt
src/mcp_opendart/registry/: initialize_registry.py  tool_registry.py
src/mcp_opendart/tools/: disclosure_tools.py  financial_info_tools.py  major_report_tools.py  ownership_disclosure_tools.py  periodic_report_tools.py  securities_filing_tools.py
src/mcp_opendart/utils/: corp_code_search.py  ctx_helper.py  fetch_opendart_api_fields.py
src/mcp_opendart/utils/data/: parsed_response_structures.json
src/mcp_opendart/utils/prompts/: description_prompt.txt
src/opendart/utils/data/: 20230309000761.xml  20230309000761_00760.xml  20230309000761_00761.xml  20230315001104.xml  20230315001104_00760.xml  20230315001104_00761.xml  20230428801032.xml  20230515002292.xml  20240424800359.xml
