[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-opendart"
version = "0.1.0"
description = "The Model Context Protocol (MCP) OpenDART integration is an open-source implementation that bridges OpenDART (Korea Financial Supervisory Service's Data Analysis, Retrieval and Transfer System) with AI language models following Anthropic's MCP specification. This project enables secure, contextual AI interactions with OpenDART while maintaining data privacy and security."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "mcp>=1.3.0",
    "fastmcp>=2.2.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.6",
    "click>=8.1.7",
    "uvicorn>=0.27.1",
    "starlette>=0.37.1",
]

[[project.authors]]
name = "AI Center"
email = "lchangoo@gmail.com"

[project.scripts]
mcp-opendart = "mcp_opendart.server:main"

[project.optional-dependencies]
dev = [
    "uv>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "mcp[cli]>=1.3.0",
    "types-requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_opendart"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true